# tits

./: .travis.yml  Makefile.am  README.md  configure.ac
aux/R/: Makefile.am
aux/matlab/: Makefile.am  crosscorrirr.m  tits_xcor.m
src/: Makefile.am  acf24ar.c  acf24ar.h  cots_xcor.c  cots_xcor_test_02.c  cotse.h  crosscorrirr.c  crosscorrirr.m  crosscorrirr.yuck  crosscorrirr_.c  crosscorrirr_.m  crosscorrirr_test_01.c  edelson_krolik.m  guess_lag.c  guess_lag.yuck  hy.c  hy.h  nifty.h  norm.c  norm.h  perio.c  perio.h  roots.c  roots.h  roots.yuck  sacf.c  sacf.h  tits.h  tits_xcor.c  version.c.in  version.h  xcor.c  xcor.h
test/: Makefile.am  acf24ar_01.c  acf24ar_02.c  acf24ar_03.c  acf24ar_04.c  hy_01.c  norm_01.c  norm_02.c  roots_01.c  roots_02.c  roots_03.c  roots_04.c  sacf_01.c  sacf_02.c  sacf_03.c  sacf_04.c  xcor_01.c
